fixed controllers, removed unnecessary files